--- a/README
+++ b/README
@@ -31,3 +31,13 @@ exporting the output as a wav file.
 - Usage: python spicetowav.py <SPICE output file> <Output wav> [clipping voltage].
   Clipping voltage is optional and if it's unspecified wav is written
   with maximum amplitude such that clipping doesn't occur.
+
+# Example
+
+Following commands can be used to get output from lowpass filter example file
+when run on Linux:
+
+    $ python wavtospice.py file.wav inputvalues
+    $ ngspice -b examples/lowpass.cir > spice_output
+    $ python spicetowav.py spice_output output.wav
+
